Fri Feb  5 20:45:41 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Fixed spurious byte swapping for received transport control
          samples.

Fri Feb  5 18:44:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * INSTALL:
        * NEWS:

          Updated documentation for next release.

Fri Feb  5 17:34:12 UTC 2010  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/monitor/README:

          Add missing README with Monitor library documentation.

Fri Feb  5 16:43:30 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Dropped remaining use of TransportRetained element from
          remove_sample; this causes spurious ACE_Message_Block allocations
          which are not subsequently released.

Fri Feb  5 16:34:13 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tools/odds_monitor/doc/userguide.html:

          Documented the QT_CFG environment variable and added steps
          for building with VC++.

Fri Feb  5 16:13:51 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/README:

          Replaced explicit environment setup and build instructions with
          a reference to the user guide.

Fri Feb  5 15:59:27 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:

          Added a reference to the OpenDDS-Bench documentation directory.

        * performance-tests/Bench/doc/scenarios.txt:
        * performance-tests/Bench/doc/tests-latency.txt:
        * performance-tests/Bench/doc/tests.txt:

          Added '.txt' extension to these text files to accommodate those
          who need it.

Fri Feb  5 15:39:33 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/doc/odds_monitor.man1:

          Removed this file.

Fri Feb  5 15:24:19 UTC 2010  Paul Calabrese  <calabrese_p@ociweb.com>

        * NEWS:
