@@ -1,8 +1,8 @@
-This is OpenDDS version 2.0.1, released Fri Oct 23 19:58:26 UTC 2009.
+This is OpenDDS version 2.1, released Fri Feb  5 21:47:14 UTC 2010.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.0.1
+    OpenDDS VERSION: 2.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
