@@ -1,13 +1,13 @@
 /*
  * $Id$
  *
- * Copyright 2010 Object Computing, Inc.
+ * Copyright 2009 Object Computing, Inc.
  *
  * Distributed under the OpenDDS License.
  * See: http://www.opendds.org/license.html
  */
 
 #define DDS_MAJOR_VERSION 2
-#define DDS_MINOR_VERSION 0
-#define DDS_MICRO_VERSION 1
-#define DDS_VERSION "2.0.1"
+#define DDS_MINOR_VERSION 1
+#define DDS_MICRO_VERSION 0
+#define DDS_VERSION "2.1"
